Refactored memory model again